# file-system

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: short_sample.txt
src/: main.cpp
src/CLI/: CLI.cpp  CLI.hpp
src/FileSystem/: FileSystem.cpp  FileSystem.hpp
src/FileSystem/Converter/: Converter.cpp  Converter.hpp
src/FileSystem/Directory/: Directory.cpp  Directory.hpp
src/FileSystem/DiskHandler/: DiskHandler.cpp  DiskHandler.hpp
src/FileSystem/DiskHandler/DiskReader/: DiskReader.cpp  DiskReader.hpp
src/FileSystem/DiskHandler/DiskWriter/: DiskWriter.cpp  DiskWriter.hpp
src/FileSystem/Error/: Error.hpp
src/FileSystem/FAT/: FAT.cpp  FAT.hpp
src/FileSystem/FSMaker/: FSMaker.cpp  FSMaker.hpp
src/FileSystem/FileData/: FileData.cpp  FileData.hpp
src/FileSystem/FileHandler/: FileHandler.cpp  FileHandler.hpp
src/FileSystem/FileHandler/ByteReader/: ByteReader.cpp  ByteReader.hpp
src/FileSystem/FileHandler/ByteReader/ClusterReader/: ClusterReader.cpp  ClusterReader.hpp
src/FileSystem/FileHandler/ByteWriter/: ByteWriter.cpp  ByteWriter.hpp
src/FileSystem/FileHandler/ByteWriter/ClusterWriter/: ClusterWriter.cpp  ClusterWriter.hpp
src/FileSystem/FileHandler/FileReader/: FileReader.cpp  FileReader.hpp
src/FileSystem/FileHandler/FileWriter/: FileWriter.cpp  FileWriter.hpp
src/FileSystem/FileHandler/HandlerBuilder/: HandlerBuilder.cpp  HandlerBuilder.hpp
src/FileSystem/FileHandler/MetadataHandler/: MetadataHandler.cpp  MetadataHandler.hpp
src/FileSystem/Metadata/: Metadata.cpp  Metadata.hpp
src/FileSystem/PathResolver/: PathResolver.cpp  PathResolver.hpp
src/FileSystem/file_io/FileReader/: FileReader.hpp
src/FileSystem/file_io/FileWriter/: FileWriter.cpp
src/Reader/: Reader.cpp  Reader.hpp
src/file_io/: FileHandler.cpp  FileHandler.hpp
src/file_io/FileReader/: FileReader.cpp  FileReader.hpp
src/file_io/FileWriter/: FileWriter.cpp
test/: cat.cpp  converter.cpp  directory.cpp  dirname_basename.cpp  fat.cpp  file_data.cpp  hello_test.cpp  import.cpp  ls.cpp  mkdir.cpp  path_manipulations_test.cpp  rm.cpp  touch.cpp
test/assets/: long_sample.txt
tests/: cd.cpp  cp.cpp  error.cpp  export.cpp  fat.cpp  import.cpp  ls.cpp  mv.cpp  reader_writer.cpp  rm.cpp  rmdir.cpp
